[package]
edition = "2021"
name = "kmedoids"
version = "0.4.2"
authors = ["Erich Schubert <erich.schubert@tu-dortmund.de>", "Lars Lenssen <lars.lenssen@tu-dortmund.de>"]
description = "k-Medoids clustering with the FasterPAM algorithm"
homepage = "https://github.com/kno10/python-kmedoids"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/kno10/python-kmedoids"

[lib]
name = "kmedoids"
crate-type = ["cdylib"]

[dependencies]
rustkmedoids = { version = "0.4.2", package = "kmedoids", git = "https://github.com/kno10/rust-kmedoids" }
numpy = "0.18"
ndarray = "0.15"
rand = "0.8"
rayon = "1.7"

[dependencies.pyo3]
version = "0.18"
features = ["extension-module"]

